syntax = "proto3";

package task;

service TasksService {
  rpc CreateTask(CreateTaskRequest) returns(Task){}
  rpc DeleteTask(TaskById) returns(DefaultRes){}
  rpc FindOne (TaskById) returns (Task) {}
  rpc TaskList (TaskListRequest) returns (TaskListDto) {}

}

message DefaultRes {
  bool ok=1;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string parent = 3;
}


message TaskById {
  string id = 1;
}

message Task {
  string id = 1;
  string title = 2;
  string parent = 3;
  string description = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message TaskListRequest{
  int32 page = 1;
  int32 limit = 2;
}

message TaskListDto {
  repeated Task items=1;
  int32 total = 2;
}